--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 <div class="wp-block-columns is-layout-flex wp-container-9 wp-block-columns-is-layout-flex">
 <div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow">
-<figure class="wp-block-image size-large is-resized"><a href="https://prideatplay.square.site/"><img data-attachment-id="528" data-permalink="https://prideatplay.org/sydney/cover/" data-orig-file="assets/cover.webp" data-orig-size="826,1178" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="cover" data-image-description="" data-image-caption="" data-medium-file="assets/cover.webp?w=210" data-large-file="assets/cover.webp?w=718" loading="lazy" src="assets/cover.webp" alt="" class="wp-image-528" style="width:295px;height:420px" width="295" height="420" srcset="assets/cover.webp?w=295 295w, assets/cover.webp?w=590 590w, assets/cover.webp?w=105 105w, assets/cover.webp?w=210 210w" sizes="(max-width: 295px) 100vw, 295px" /></a></figure>
+<figure class="wp-block-image size-large is-resized"><a href="https://drive.google.com/file/d/1Z1lplsvUYvTdHVUXrZmSTrdpit6zLmBE/view?usp=sharing"><img data-attachment-id="528" data-permalink="https://prideatplay.org/sydney/cover/" data-orig-file="assets/cover.webp" data-orig-size="826,1178" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="cover" data-image-description="" data-image-caption="" data-medium-file="assets/cover.webp?w=210" data-large-file="assets/cover.webp?w=718" loading="lazy" src="assets/cover.webp" alt="" class="wp-image-528" style="width:295px;height:420px" width="295" height="420" srcset="assets/cover.webp?w=295 295w, assets/cover.webp?w=590 590w, assets/cover.webp?w=105 105w, assets/cover.webp?w=210 210w" sizes="(max-width: 295px) 100vw, 295px" /></a></figure>
 </div>
 
 
@@ -163,14 +163,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <div class="wp-block-buttons has-custom-font-size has-small-font-size is-content-justification-left is-layout-flex wp-container-7 wp-block-buttons-is-layout-flex">
 <div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://drive.google.com/file/d/1Z1lplsvUYvTdHVUXrZmSTrdpit6zLmBE/view?usp=sharing">read the catalogue</a></div>
 
-
-
-<div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="https://prideatplay.square.site/">purchase paperback ($25.99)</a></div>
 </div>
 
 
 
-<p class="has-small-font-size">Paperback, matte cello cover, 128 pages. all proceeds go to LGBTQIA+  charities in oceania and the asia pacific. </p>
+<p class="has-small-font-size">Paperback, matte cello cover, 128 pages. all proceeds go to LGBTQIA+ charities in oceania and the asia pacific.</p>
 </div>
 </div>
 
